--- a/index.html
+++ b/index.html
@@ -4,26 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap">
 </head>
-<header class="nav-bar">
-    <nav>
-        <h2 class="Logo">Logo</h2>
-<ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Shop</a></li>
-    <li><a href="#">Contact</a></li>
-</ul>
-<div class="nav-btn">
-    <ul>
-        <li><a href="#" class="login-btn">Log In</a></li>
-    </ul>
-<a href="#" class="nav-sign-up">Sign Up</a>
-</div>
-    </nav>
-</header>
 <body>
-    
+    <header>
+        <div id="logo">
+            LOGO
+        </div>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Shop</a>
+            <a href="#">Contact Us</a>
+        </nav>
+        <div id="nav-signup">
+            <a href="./login.html">Log In</a>
+            <button>Sign Up</button>
+        </div>
+    </header>
+    <main>
+        <section id="hero">
+        <div class="hero-text">
+            <h1>Blossom Online: Where Every Petal Tells A Story</h1>
+            <p>You can't buy happiness, but you can buy flowers which is pretty much the same thing</p>
+            <button>Shop Now</button>
+        </div>
+        <div id="hero-img">
+            <img id="hero-feature" src="./flower.png" alt="">
+            <img id="hero-bg" src="./home-hero-vector.png" alt="">
+        </div>
+    </section>
+    <section id="flower-shop">
+        <h3>Flower Shop</h3>
+        <div class="row">
+            <div class="box">
+                <img src="./flower.png" alt="">
+                <h3>Flower 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quod. Quia sapiente repudiandae ratione libero, aliquid necessitatibus aliquam inventore hic assumenda sit, velit soluta dolorem!</p>
+                <button>Buy Now</button>
+            </div>
+        <div class="row">
+            <div class="box">
+                <img src="./flower.png" alt="">
+                <h3>Flower 2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quod. Quia sapiente repudiandae ratione libero, aliquid necessitatibus aliquam inventore hic assumenda sit, velit soluta dolorem!</p>
+                <button>Buy Now</button>
+            </div>
+        <div class="row">
+            <div class="box">
+                <img src="./flower.png" alt="">
+                <h3>Flower 3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quod. Quia sapiente repudiandae ratione libero, aliquid necessitatibus aliquam inventore hic assumenda sit, velit soluta dolorem!</p>
+                <button>Buy Now</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="box">
+                <img src="./flower.png" alt="">
+                <h3>Flower 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quod. Quia sapiente repudiandae ratione libero, aliquid necessitatibus aliquam inventore hic assumenda sit, velit soluta dolorem!</p>
+                <button>Buy Now</button>
+            </div>
+        <div class="row">
+            <div class="box">
+                <img src="./flower.png" alt="">
+                <h3>Flower 2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quod. Quia sapiente repudiandae ratione libero, aliquid necessitatibus aliquam inventore hic assumenda sit, velit soluta dolorem!</p>
+                <button>Buy Now</button>
+            </div>
+        <div class="row">
+            <div class="box">
+                <img src="./flower.png" alt="">
+                <h3>Flower 3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quod. Quia sapiente repudiandae ratione libero, aliquid necessitatibus aliquam inventore hic assumenda sit, velit soluta dolorem!</p>
+                <button>Buy Now</button>
+            </div>
+        </div>
+    </section>
+    </main>
 </body>
 </html>
